--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,42 @@
-.App {
-  text-align: center;
+App {
+	text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.UserSection {
+	display: flex;
+	justify-content: space-evenly;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.CounterSection {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	min-height: 20vh;
+	font-size: 24px;
+	border: 2px solid black;
+	padding: 20px;
+	background-color: rgb(239, 246, 208);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.btn-section {
+	display: flex;
+	width: 200px;
+	justify-content: space-around;
+}
+
+.btn {
+	background-color: aquamarine;
+	color: black;
+}
+.nav: {
+  color: "yellow";
+  font-size: 24px;
+  background-color: "blue";
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  font-weight:bold ;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-align: center;
+  border: "1px solid black",
 }
