--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,19 @@ App {
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
+.productos {
+	display: flex;
+	justify-content: space-evenly;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
 
 .Center {
 	margin-top: 20px;
 	margin-bottom: 20px;
 	text-align: center;
 	list-style-type: none;
+	text-decoration: none;
 	color: blue;
 }
 
